# LibtorrentSharp

./: .gitignore  Directory.Build.props  LibtorrentSharp.slnx  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
LibtorrentSharp/: AddTorrentParams.cs  Ed25519.cs  InfoHashes.cs  IpFilter.cs  LibtorrentSession.cs  LibtorrentSessionConfig.cs  LibtorrentSharp.csproj  MagnetHandle.cs  MagnetUri.cs  PeerInfo.cs  PortMapping.cs  SessionStatsMetric.cs  SessionStatsMetrics.cs  SettingsPack.cs  Sha1Hash.cs  Sha256Hash.cs  TorrentCreator.cs  TorrentHandle.cs  TorrentInfo.cs  TorrentStatus.cs  TrackerInfo.cs  WebSeedInfo.cs
LibtorrentSharp.Native/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
LibtorrentSharp.Native/include/: events.h  library.h  locks.hpp  settings.h  struct_align.h  structs.h
LibtorrentSharp.Native/src/: events.cpp  library.cpp  settings.cpp
LibtorrentSharp.Tests/: AddMagnetSmokeTests.cs  AlertCapture.cs  DhtGetImmutableSmokeTests.cs  DhtMutableGetSmokeTests.cs  DhtMutablePutSmokeTests.cs  DhtPutImmutableSmokeTests.cs  DhtStatsSmokeTests.cs  Ed25519Tests.cs  FilePiecePrioritySmokeTests.cs  FileRenamedAlertTests.cs  ForceRecheckSmokeTests.cs  GetPeersSmokeTests.cs  GetPortMappingsSmokeTests.cs  GetStatusSmokeTests.cs  GetTrackersSmokeTests.cs  HandlePeersSmokeTests.cs  HashTypesTests.cs  IpFilterSmokeTests.cs  LibtorrentSessionSmokeTests.cs  LibtorrentSharp.Tests.csproj  LoopbackRuntimeAlertTests.cs  LoopbackTorrentFixture.cs  MagnetUriTests.cs  MoveStorageSmokeTests.cs  PauseResumeSmokeTests.cs  PiecePrioritySmokeTests.cs  PortmapErrorAlertTests.cs  RateLimitSmokeTests.cs  ResumeDataSmokeTests.cs  ScrapeAlertTests.cs  SequentialDownloadSmokeTests.cs  SessionListenAlertTests.cs  SessionListenTests.cs  SessionStateIoTests.cs  SessionStatsMetricsTests.cs  SessionStatsSmokeTests.cs  StorageMovedAlertTests.cs  SuperSeedingSmokeTests.cs  TorrentCheckedAlertTests.cs  TorrentCreatorWireFormatTests.cs  (+6 more)
LibtorrentSharp.Tests/Network/: DhtImmutableRoundTripTests.cs  MoveStorageTests.cs  NetworkTestGate.cs  PauseResumeSemanticsTests.cs  PublicSwarmFixture.cs  PublicSwarmTests.cs  ResumeRoundTripTests.cs
LibtorrentSharp/Alerts/: AddTorrentAlert.cs  Alert.cs  BlockDownloadingAlert.cs  BlockFinishedAlert.cs  BlockTimeoutAlert.cs  BlockUploadedAlert.cs  CacheFlushedAlert.cs  DhtAnnounceAlert.cs  DhtBootstrapAlert.cs  DhtLogAlert.cs  (+60 more)
(+34 files in other folders)
